Bug 257805 - Dolphin/Konqueror: --select parameter does not REALLY select the file
Summary: Dolphin/Konqueror: --select parameter does not REALLY select the file
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: general (other bugs)
Version First Reported In: 16.12.2
Platform: Debian unstable Linux
: NOR normal
Target Milestone: ---
Assignee: Peter Penz
URL:
Keywords: junior-jobs
Depends on:
Blocks:
 
Reported: 2010-11-24 18:33 UTC by ultr
Modified: 2011-09-22 15:28 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.8.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description ultr 2010-11-24 18:33:01 UTC
Version:           unspecified (using KDE 4.5.1) 
OS:                Linux

When running Dolphin/Konqueror with the --select parameter, the file you choose does not really get selected: it cannot be cut with Ctrl+X, pressing arrows start selection from the beggining of the files list, etc.

The selection indicator is drawn around the file name, but the focus indicator isn't.

Reproducible: Always
Comment 1 Frank Reininghaus 2010-11-25 17:51:59 UTC
Thanks for the bug report! I agree that it would feel more 'natural' if the selected file was also the current item. But I'm unsure what should be done in the case that more than one file is passed to the --select option. Maybe the first one should be the current item then.

In any case, if Peter agrees that this change makes sense, this might be a nice junior job.
Comment 2 MaartenDM 2011-01-16 14:49:18 UTC
This seems to be fixed in 4.6 (using RC2)
Comment 3 Frank Reininghaus 2011-02-05 12:15:35 UTC
(In reply to comment #2)
> This seems to be fixed in 4.6 (using RC2)

I think it's not - I can still reproduce in master. The bug is that the item which gets selected using the --select option is not the *current* item. You can see that by pressing the down arrow key -> you start from the top of the view.