Fixed bug for selecting files with --select parameter.

Files selected via --select parameter did not get current item focus.
And if files were deleted while being current item, updating the view
would select the next item instead of the first item in the list.

BUG: 257805
CCMAIL: peter.penz19@gmail.com
CCMAIL: frank78ac@googlemail.com